@@ -97,6 +97,18 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|Ivy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|core
 operator|.
 name|module
@@ -775,6 +787,116 @@ argument_list|(
 literal|'\r'
 argument_list|,
 literal|'\n'
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|expected
+argument_list|,
+name|wrote
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testExtends
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|IvySettings
+argument_list|()
+argument_list|,
+name|XmlModuleDescriptorWriterTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"test-extends-all.xml"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|XmlModuleDescriptorWriter
+operator|.
+name|write
+argument_list|(
+name|md
+argument_list|,
+name|LICENSE
+argument_list|,
+name|dest
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|dest
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|wrote
+init|=
+name|FileUtil
+operator|.
+name|readEntirely
+argument_list|(
+operator|new
+name|BufferedReader
+argument_list|(
+operator|new
+name|FileReader
+argument_list|(
+name|dest
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"\r\n?"
+argument_list|,
+literal|"\n"
+argument_list|)
+decl_stmt|;
+name|String
+name|expected
+init|=
+name|readEntirely
+argument_list|(
+literal|"test-write-extends.xml"
+argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"\r\n?"
+argument_list|,
+literal|"\n"
+argument_list|)
+operator|.
+name|replaceAll
+argument_list|(
+literal|"working@localhost"
+argument_list|,
+name|Ivy
+operator|.
+name|getWorkingRevision
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|assertEquals
