@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one
+   or more contributor license agreements.  See the NOTICE file
+   distributed with this work for additional information
+   regarding copyright ownership.  The ASF licenses this file
+   to you under the Apache License, Version 2.0 (the
+   "License"); you may not use this file except in compliance
+   with the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing,
+   software distributed under the License is distributed on an
+   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+   KIND, either express or implied.  See the License for the
+   specific language governing permissions and limitations
+   under the License.    
+-->
+<ivy-module version="2.2">
+	<info organisation="myorg"
+		module="mymodule"
+		revision="working@localhost"
+		status="integration"
+		publication="20091206000000"
+	>
+		<extends organisation="myorg" module="myparent" revision="myrev" location="test-extends-parent.xml" extendType="all"/>
+		<description>
+		Parent module description.
+		</description>
+	</info>
+	<configurations>
+		<conf name="default" visibility="public"/>
+		<conf name="conf1" visibility="public"/>
+		<conf name="conf2" visibility="private"/>
+	</configurations>
+	<publications>
+		<artifact name="mymodule" type="jar" ext="jar" conf="default,conf1,conf2"/>
+	</publications>
+	<dependencies>
+		<dependency org="myorg" name="mymodule1" rev="1.0" conf="default->default"/>
+		<dependency org="myorg" name="mymodule2" rev="2.0" conf="conf1->conf1;conf2->conf2"/>
+	</dependencies>
+</ivy-module>
